Variable scope work and type-inference data structures sketch.
- VarScopePass resolves all variable references to defining
  let-statements, handling lexical scope appropriately.
- ArgLetPass adds lets for every arg on every toplevel so that
  resolution works for arg references too.
- Sketch of InferredType and type-inference / type-lowering passes. No
  logic implemented yet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,9 @@ set(FRONTEND_SRCS
     frontend/ast.cc
     frontend/visitor.cc
     frontend/func-inline.cc
+    frontend/var-scope.cc
+    frontend/type-infer.cc
+    frontend/type-lower.cc
     frontend/codegen.cc
     frontend/compiler.cc
     frontend/cmdline-driver.cc)
